implemented some of the code analysis suggestions from the IDE.